# ChangeLog for x11-misc/electricsheep
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/electricsheep/ChangeLog,v 1.14 2004/04/26 08:07:20 dragonheart Exp $

  26 Apr 2004; Daniel Black <dragonheart@gentoo.org> electricsheep-2.5.ebuild,
  metadata.xml:
  Added media-libs/alsa-lib and media-libs/nas to dependancies. This program
  will use sys-libs/slang and media-libs/aalib if they exist on the system and
  transform them into dependancies. Emailed author for fix to this.

*electricsheep-2.5 (24 Apr 2004)

  24 Apr 2004; Daniel Black <dragonheart@gentoo.org> electricsheep-2.5.ebuild,
  metadata.xml:
  Version bump. Thanks to Aaron Wilson <unstableaaron@hotmail.com> in bug #47856

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> electricsheep-2.4-r2.ebuild:
  Added IUSE=

  23 Mar 2004; Jason Wever <weeve@gentoo.org> electricsheep-2.4-r2.ebuild:
  Added ~sparc keyword.

*electricsheep-2.4-r2 (04 Dec 2003)

  13 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> electricsheep-2.4-r2.ebuild:
  Updated x11-misc/xloadimage to media-gfx/xloadimage, see bug #26751

  04 Dec 2003; Mike Frysinger <vapier@gentoo.org> :
  Move around some of the installed files #35033.

*electricsheep-2.4-r1 (16 Nov 2003)

  16 Nov 2003; Mike Frysinger <vapier@gentoo.org> :
  Add patch to fix nice option passing.

*electricsheep-2.4 (01 Aug 2003)

  29 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Remove OPT_CFLAGS crude (mcpu/Werror) to fix gcc-3.3.x compiling #29887.

  06 Sep 2003; Heinrich Wendel <lanius@gentoo.org>
  electricsheep-2.3-r1.ebuild, electricsheep-2.4.ebuild:
  bug #27604, 2.3 is not usable anymore -> remove

  01 Aug 2003; Michael Sterrett <msterret@gentoo.org>
  electricsheep-2.4.ebuild:
  version bump

*electricsheep-2.3-r1 (13 June 2003)

  13 June 2003; Mike Frysinger <vapier@gentoo.org> :
  Path fix #18504.

*electricsheep-2.3 (10 Mar 2003)

  10 Mar 2003; Mike Frysinger <vapier@gentoo.org> :