@@ -1,6 +1,6 @@
-MD5 bcf163ad73a1791dfcc06b8cf009c71e ChangeLog 2287
+MD5 113dd9f693beeb7478b355a0f37a65a6 electricsheep-2.5.ebuild 2550
 MD5 70ad9d89ce93558d71fa33c91c0caafb electricsheep-2.4-r2.ebuild 1564
-MD5 8759382d28aabce121688863a234f1fc electricsheep-2.5.ebuild 2520
+MD5 708802c63df346b7a85a8d14f45de5f1 ChangeLog 2409
 MD5 1652522405f5936eb29776ef8d5ffa5b metadata.xml 310
 MD5 862e2d24a6032dc901ed480dc85c1f0f files/digest-electricsheep-2.4-r2 69
 MD5 87239588d30aa9a05e38a9bd73e53476 files/nice.patch 1442
