@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/electricsheep
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/electricsheep/ChangeLog,v 1.14 2004/04/26 08:07:20 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/electricsheep/ChangeLog,v 1.15 2004/04/26 19:43:19 swtaylor Exp $
+
+  26 Apr 2004; Scott W Taylor <swtaylor@gentoo.org> electricsheep-2.5.ebuild:
+  ebuild touchup to fix hardened "BREG" error
 
   26 Apr 2004; Daniel Black <dragonheart@gentoo.org> electricsheep-2.5.ebuild,
   metadata.xml:
